# kitget

./: .editorconfig  .envrc  Cargo.toml  README.md  default.nix  flake.nix  shell.nix
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: rust.yml
.woodpecker/: checks.yml
src/: api.rs  cli.rs  error.rs  lib.rs  main.rs
