[package]
name = "kitget"
version = "0.0.1"
authors = ["Adam Perkowski <adas1per@protonmail.com>"]
edition = "2024"
description = "Display and customize cat images in your terminal :3"
readme = "README.md"
repository = "https://github.com/adamperkowski/kitget"
license = "MIT"
keywords = ["api", "cli", "graphics", "cat"]
categories = ["command-line-utilities", "graphics"]
include = [
    "**/*.rs",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "rustfmt.toml"
]

[profile.release]
lto = "fat"
codegen-units = 2
panic = "abort"
strip = true
opt-level = "z"

[dependencies]
anyhow = "1.0.97"
bytes = "1.10.1"
clap = { version = "4.5.36", features = ["derive", "color", "error-context", "help", "usage", "std"], default-features = false }
image = { version = "0.25.6", features = ["gif", "jpeg", "png", "tiff", "webp"], default-features = false }
reqwest = { version = "0.12.15", features = ["default-tls", "json"], default-features = false }
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"], default-features = false }
viuer = "0.9.1"
