[package]
name = "kitget"
version = "0.0.2"
authors = ["Adam Perkowski <adas1per@protonmail.com>"]
edition = "2024"
description = "Display and customize cat images in your terminal 😼"
readme = "README.md"
repository = "https://github.com/adamperkowski/kitget"
license = "MIT"
keywords = ["api", "cli", "graphics", "cat"]
categories = ["command-line-utilities", "graphics"]
include = [
    "**/*.rs",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "rustfmt.toml"
]

[profile.release]
lto = "fat"
codegen-units = 2
panic = "abort"
strip = true
opt-level = "z"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.49", features = ["derive", "color", "error-context", "help", "usage", "std"], default-features = false }
image = { version = "0.25.9", features = ["gif", "jpeg", "png", "tiff", "webp"], default-features = false }
reqwest = { version = "0.12.24", features = ["default-tls", "json"], default-features = false }
thiserror = { version = "2.0.17", default-features = false }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"], default-features = false }
viuer = "0.9.2"
